syntax = "proto3";

option java_multiple_files = true;
option java_package = "auth";


service AuthService {
  rpc IsUserValid(AuthRequest) returns (AuthResponse);
}


message AuthRequest {
  int64 id = 1;
}

message AuthResponse {
  int64 id = 1;
  string role = 2;
  bool isValid = 3;
}